# auto_networking

./: .env.example  .gitignore  Anif framework structure.md  CLAUDE.md  CLAUDE_FRAMEWORK_BUILD_GUIDE.md  CLAUDE_PLATFORM_BUILD_GUIDE.md  README.md  alembic.ini  constitution.md  pyproject.toml  spec.md
.claude/: resume.md  settings.json
.github/workflows/: accessibility.yml  ci.yml  compliance.yml  intent-validate.yml
docker/: Dockerfile  docker-compose.yml  prometheus.yml
docs/000-foundation/: ANIF-001_Charter.md  ANIF-002_Principles.md  ANIF-003_Glossary.md  ANIF-004_RACI.md
docs/100-governance/: ANIF-100_Governance_Overview.md  ANIF-101_Compliance_Mapping.md  ANIF-102_NIST_CSF_Alignment.md  ANIF-103_Autonomous_Action_Policy.md  ANIF-104_Change_Management_Policy.md  ANIF-105_Escalation_Exception_Policy.md  (+2 more)
docs/strategic/: Ai_ethics.md  (+11 more)
migrations/: env.py
policies/: data_residency.yml  no_public_ingress.yml  pci_compliant.yml  zero_trust.yml
prompts/: 01_Risk_Trust_Quantification_Framework_prompt.md  02_Change_Validation_Digital_Twin_prompt.md  03_Closed_Loop_Feedback_Learning_prompt.md  04_Policy_Conflict_Resolution_Precedence_prompt.md  05_Distributed_Source_of_Truth_prompt.md  06_Governance_Human_in_Loop_prompt.md  07_Incident_Outage_Modeling_prompt.md  08_Dark_NOC_Evolution_Plan_prompt.md  09_Observability_Explainability_Artifacts_prompt.md  10_Extensibility_Plugin_Model_prompt.md  Decision Engine Prompt (Bounded AI).md  Intent_Vailidation_service_prompt.md  Refactor Prompt.md  Schema_gen_Prompt.md  Test Generator Prompt.md  architecture_doc_prompt.md  policy_engine.md
schemas/: README.md  action_schema.yml  audit_record_schema.yml  example_intent.yml  intent_schema.yml  policy_schema.yml  risk_score_schema.yml
tests/: conftest.py
(+317 files in other folders)
