[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "anif-platform"
version = "0.1.0"
description = "ANIF Reference Platform — autonomous networking intent pipeline"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "sqlalchemy>=2.0.30",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "alembic>=1.13.1",
    "redis>=5.0.4",
    "httpx>=0.27.0",
    "cryptography>=42.0.0",
    "python-jose[cryptography]>=3.3.0",
    "prometheus-client>=0.20.0",
    "structlog>=24.1.0",
    "PyYAML>=6.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.6",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.5",
    "black>=24.4.2",
    "mypy>=1.10.0",
    "types-PyYAML>=6.0.12",
    "types-redis>=4.6.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]
fixable = ["ALL"]
ignore = ["E501", "B008"]

[tool.ruff.lint.isort]
known-first-party = ["anif_platform"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true
disallow_untyped_defs = true
disallow_any_generics = true
warn_return_any = true
warn_unused_ignores = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["jose.*", "prometheus_client.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing --cov-fail-under=0"

[tool.hatch.build.targets.wheel]
packages = ["src/anif_platform"]
